# deepcli

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml
deepcli/: Cargo.toml
src/: api.rs  cli.rs  main.rs  test.rs
