[package]
name = "deepcli"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0"
colored_json = "3.0"
