[package]
edition = "2024"
license = "MIT"
name = "deepcli"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
base64 = "0.21"
chrono = {version = "0.4", features = ["serde"]}
clap = {version = "4.4", features = ["derive"]}
colored_json = "3.0"
crossterm = "0.27"
futures-util = "0.3"
image = "0.24"
mime_guess = "2.0"
reqwest = {version = "0.11", features = ["json", "multipart", "stream"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1", features = ["full"]}
